Spelling mistake fixed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body class="disable-select">
    <header>
       <span class="material-icons">menu</span>
-      <h2>Wourkout</h2>
+      <h2>Workout</h2>
       <span class="material-icons mode">dark_mode</span>
    </header>
    <aside>
