--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </ul>
    </aside>
    <main>
-      <div class="day"></div>
+      <div class="day weekday"></div>
       <div class="day warmup">
          <div>Dynamic streching</div>
          <iframe class="ytvideo" src="https://www.youtube.com/embed/ZO2ZwicxCEs?start=13" title="YouTube video player"
@@ -46,15 +46,25 @@
             allowfullscreen></iframe>
       </div>
 
-      <div class="day warmup">
-         <div>Warm up</div>
-         <!-- <div class="notice">5 min intense cardio</div> -->
-         <div class="notice">Bring sally up push ups</div>
-         <div class="notice">Push ups - 2 sets</div>
-         <div class="notice">Pull ups - 3 sets</div>
+      <div class="day core_cardio"></div>
+
+      <div class="day muscle_push_pull_legs"></div>
+      <div class="table muscle_push_pull_legs">
+         <table>
+            <thead>
+               <tr>
+                  <th>Sno.</th>
+                  <th>Name</th>
+                  <th>Sets</th>
+                  <th>Reps</th>
+               </tr>
+            </thead>
+            <tbody class="push_pull_legs"></tbody>
+         </table>
       </div>
 
-      <div class="day muscle"></div>
+
+      <div class="day muscle_isolation"></div>
       <div class="table">
          <table>
             <thead>
@@ -65,30 +75,29 @@
                   <th>Reps</th>
                </tr>
             </thead>
-            <tbody></tbody>
+            <tbody class="isolation"></tbody>
          </table>
       </div>
-      <div class="day">
-         Core workout
-         <div class="notice">10 minutes</div>
+
+      <div class="day muscle_gym"></div>
+      <div class="table gym">
+         <table>
+            <thead>
+               <tr>
+                  <th>Sno.</th>
+                  <th>Name</th>
+                  <th>Sets</th>
+                  <th>Reps</th>
+               </tr>
+            </thead>
+            <tbody class="gym_body"></tbody>
+         </table>
       </div>
-      <div class="day">
-         Intense cardio
-         <div class="notice">10 minutes</div>
-      </div>
-      <div class="day staticstr">
-         <div>Static stretch</div>
-         <iframe class="ytvideo" src="https://www.youtube.com/embed/NFS0U3X5Aco?start=43" title="YouTube video player"
-            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-      </div>
-      <div class="day forearms">Forearms <div class="notice">5 minutes</div></div>
-      <div class="day forearms">Calves <div class="notice">5 minutes</div></div>
       <div class="day">Diary
          <div class="diary" contenteditable="true"></div>
       </div>
    </main>
-   
+
 </body>
 <script src="main.js"></script>
 <script src="darkmode.js"></script>
